--- a/index2.html
+++ b/index2.html
@@ -50,7 +50,7 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="" id="home"><a href="index.html">Home</a></li>
-          <li class="active"><a href="index2.html"><b>Mitra</b> </a></li>
+          <li class="active"><a href="index2.html">Mitra </a></li>
           <li class="drop-down" style="display: none;"><a href="">About</a>
             <ul>
               <li><a href="#about" style="display: none;">About Us</a></li>
@@ -87,19 +87,33 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
-  <section id="hero" style="display:none">
+  <section id="hero" style="display:">
 
     <div class="container">
       <div class="row">
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center" data-aos="fade-up">
           <div>
-            <h1>We design digital products that help grow businesses 2</h1>
-            <h2>We are team of talanted designers making websites with Bootstrap</h2>
+            <h1>Petani di Era Industri 4.0</h1>
+            
+            <p class="font-italic">
+              Smart Hidroponik Bersama Clover.
+            </p>
+            <i class="icofont-check-circled"></i> Penggunaan IoT.<br>
+            <i class="icofont-check-circled"></i> Mobile Monitor.<br>
+            <i class="icofont-check-circled"></i> Automation Control.<br><br>
+            <!-- <ul>
+              <li><i class="icofont-check-circled"></i> Penggunaan IoT.</li>
+              <li><i class="icofont-check-circled"></i> Mobile Monitor.</li>
+              <li><i class="icofont-check-circled"></i> Automation Control.</li>
+            </ul> -->
+            <p>
+              Mari gabung menjadi mitra kami dan mulailah atur kebun tanaman Hidroponik anda secara remote.
+            </p>
             <a href="#about" class="btn-get-started scrollto">Get Started</a>
           </div>
         </div>
         <div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="fade-left">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+          <img src="assets/img/dashboard.jpg" class="img-fluid" alt="" >
         </div>
       </div>
     </div>
@@ -115,21 +129,25 @@
         <div class="row">
           <div class="col-lg-6" data-aos="zoom-in">
             <!-- <img src="assets/img/about.jpg" class="img-fluid" alt=""> -->
-            <img src="assets/img/dashboard.png" class="img-fluid" alt="">
+            <img src="assets/img/video.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-6 d-flex flex-column justify-contents-center" data-aos="fade-left">
             <div class="content pt-4 pt-lg-0">
-              <h3>Petani di Era Industry 4.0</h3>
-              <p class="font-italic">
+              <h3>Bagaimana aplikasi Clover Bekerja ?</h3>
+              <p class="font-italic" style="display: none;">
                 Smart Hidroponik Bersama Clover.
               </p>
               <ul>
-                <li><i class="icofont-check-circled"></i> Penggunaan IoT.</li>
-                <li><i class="icofont-check-circled"></i> Mobile Monitor.</li>
-                <li><i class="icofont-check-circled"></i> Automation Control.</li>
+                <li><i class="icofont-check-circled"></i><b>Aplikasi Clover memiliki fitur monitoring and control yang bekerja secara otomatis dan real-time.</b> </li>
+                <li><i class="icofont-check-circled"></i><b>Didesain online dengan kerangka IoT.</b> 
+                  Sehingga mitra Clover dapat dengan mudah memantau dan mengakses melalui aplikasi
+                  </li>
+                <li><i class="icofont-check-circled"></i><b>Melalui Automation Control pada Aplikasi, mitra akan mendapatkan data historis mengenai kondisi tanaman.</b>
+                  Aplikasi akan mengaktifkan berbagai fitur (seperti mengalirkan air, menyalakan kipas dll) secara otomatis 
+                  </li>
               </ul>
-              <p>
-                Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate tera noden carma palorp mades tera.
+              <p style="display: none;">
+                Mari gabung menjadi mitra kami dan mulailah atur kebun tanaman Hidroponik anda secara remote.
               </p>
             </div>
           </div>
@@ -139,7 +157,7 @@
     </section><!-- End About Section -->
 
     <!-- ======= Features Section ======= -->
-    <section id="features" class="features">
+    <section id="features" class="features" style="display: none;">
       <div class="container">
 
         <div class="row">
@@ -211,39 +229,43 @@
 
         <div class="section-title" data-aos="fade-up">
           <h2>Services</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>Memeriksa kondisi air sampai melihat kondisi tanaman kini dapat dilakukan hanya dengan mengakses sebuah aplikasi.</p>
         </div>
 
         <div class="row">
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in">
             <div class="icon-box icon-box-pink">
-              <div class="icon"><i class="bx bxl-dribbble"></i></div>
-              <h4 class="title"><a href="">Lorem Ipsum</a></h4>
-              <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate</p>
+              <img src="assets/img/service1.jpg" width="200">
+              <!-- <div class="icon"><i class="bx bxl-dribbble"></i></div> -->
+              <h4 class="title"><a href="">Mengukur suhu air </a></h4>
+              <p class="description">Dapatkan informasi mengenai temperatur suhu air dengan mudah. Suhu air yang terjaga akan membuat tanaman mampu menyerap nutrisi dengan baik.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="100">
             <div class="icon-box icon-box-cyan">
-              <div class="icon"><i class="bx bx-file"></i></div>
-              <h4 class="title"><a href="">Sed ut perspiciatis</a></h4>
-              <p class="description">Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla</p>
+              <img src="assets/img/service2.png" width="200">
+              <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
+              <h4 class="title"><a href="">Pengukuran PH air</a></h4>
+              <p class="description">Dapatkan juga update mengenai PH air secara berkala. PH air yang terlalu asam atau terlalu basa menyebabkan tanaman mati.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
             <div class="icon-box icon-box-green">
-              <div class="icon"><i class="bx bx-tachometer"></i></div>
-              <h4 class="title"><a href="">Magni Dolores</a></h4>
-              <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim</p>
+              <img src="assets/img/service3.png" width="200">
+              <!-- <div class="icon"><i class="bx bx-tachometer"></i></div> -->
+              <h4 class="title"><a href="">Pemantauan Nutrisi tanaman</a></h4>
+              <p class="description">Selalu pantau perkembangan tanaman hidroponik anda untuk mendapatkan hasil panen yang terbaik.</p>
             </div>
           </div>
 
           <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="300">
             <div class="icon-box icon-box-blue">
-              <div class="icon"><i class="bx bx-world"></i></div>
-              <h4 class="title"><a href="">Nemo Enim</a></h4>
-              <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum</p>
+              <img src="assets/img/service4.png" width="200">
+              <!-- <div class="icon"><i class="bx bx-world"></i></div> -->
+              <h4 class="title"><a href="">Lakukan dalam satu aplikasi</a></h4>
+              <p class="description">Dapatkan semua informasi mengenai kondisi tanaman hidroponik anda melalui aplikai Clover</p>
             </div>
           </div>
 
@@ -253,7 +275,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    <section id="portfolio" class="portfolio" style="display:none">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -423,7 +445,7 @@
     </section><!-- End Cta Section -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+    <section id="testimonials" class="testimonials" style="display: none;">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -494,7 +516,7 @@
     </section><!-- End Testimonials Section -->
 
     <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
+    <section id="team" class="team" style="display: none;">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -622,7 +644,7 @@
     </section><!-- End Clients Section -->
 
     <!-- ======= Pricing Section ======= -->
-    <section id="pricing" class="pricing section-bg">
+    <section id="pricing" class="pricing section-bg" style="display:none">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
